unpackaged/main/default/objects/Financial_Form__c/Financial_Form__c.object-meta.xml
<CustomObject>
    <label>Financial Form</label>
    <nameField>
        <label>Financial Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>