unpackaged/main/default/objects/Financial_Form__c/fields/Parent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Last_Name__c</fullName>
    <label>Parent Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>