unpackaged/main/default/objects/Financial_Form__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The program for which the student is completing this form</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Financial Forms</relationshipLabel>
    <relationshipName>Financial_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>