unpackaged/main/default/objects/Financial_Form__c/recordTypes/Financial_Appeal.recordType-meta.xml
<RecordType>
    <fullName>Financial_Appeal</fullName>
    <active>true</active>
    <label>Financial Appeal</label>
</RecordType>