unpackaged/main/default/objects/Financial_Form__c/listViews/Approved_Needs_to_Be_Process.listView-meta.xml
<ListView>
    <fullName>Approved_Needs_to_Be_Process</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved - Needs to Be Process</label>
</ListView>