unpackaged/main/default/objects/Financial_Form__c/listViews/Denied.listView-meta.xml
<ListView>
    <fullName>Denied</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>Denied</label>
</ListView>