unpackaged/main/default/objects/Financial_Form__c/listViews/Processed_Complete.listView-meta.xml
<ListView>
    <fullName>Processed_Complete</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </filters>
    <label>Processed &amp; Complete</label>
</ListView>