unpackaged/main/default/objects/Financial_Form__c/listViews/To_Review.listView-meta.xml
<ListView>
    <fullName>To_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>To Review</label>
</ListView>